--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
       <address class="adress-menu">
         <ul class="adress-list">
           <li class="adress-list-item">
-            <a class="mailto-item" href="mailto:info@devstudio.com"
+            <a class="social" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="adress-list-item">
-            <a class="tel-item" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="social" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -94,46 +94,46 @@
         <ul class="team-list">
           <li class="team-item">
             <img
-              class="user-image"
+              class="team-image"
               src="./images/squoosh-photo/img(1).jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
             />
-            <h3 class="user-name">Mark Guerrero</h3>
+            <h3 class="team-name">Mark Guerrero</h3>
             <p class="team-profesion">Product Designer</p>
           </li>
           <li class="team-item">
             <img
-              class="user-image"
+              class="team-image"
               src="./images/squoosh-photo/img(2).jpg"
               alt="Tom Ford"
               width="264"
               height="260"
             />
-            <h3 class="user-name">Tom Ford</h3>
+            <h3 class="team-name">Tom Ford</h3>
             <p class="team-profesion">Frontend Developer</p>
           </li>
           <li class="team-item">
             <img
-              class="user-image"
+              class="team-image"
               src="./images/squoosh-photo/img(3).jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
             />
-            <h3 class="user-name">Camila Garcia</h3>
+            <h3 class="team-name">Camila Garcia</h3>
             <p class="team-profesion">Marketing</p>
           </li>
           <li class="team-item">
             <img
-              class="user-image"
+              class="team-image"
               src="./images/squoosh-photo/img(4).jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
             />
-            <h3 class="user-name">Daniel Wilson</h3>
+            <h3 class="team-name">Daniel Wilson</h3>
             <p class="team-profesion">UI Designer</p>
           </li>
         </ul>
@@ -213,11 +213,19 @@
     </main>
     <!--footer-->
     <footer class="footer">
-      <a class="header-logo" href="./index.html">WebStudio</a>
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <ul class="footer-list">
+        <li class="footer-list-item">
+          <a class="footer-logo" href="./index.html"
+            ><span class="logo-span">Web</span>Studio</a
+          >
+        </li>
+        <li class="footer-list-item">
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
