--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -23,10 +23,12 @@
     <!-- header-->
     <header class="">
       <nav class="navigation-logo">
-        <a class="header-logo" href="./index.html">WebStudio</a>
+        <a class="header-logo" href="./index.html"
+          >Web <span class="span-header-logo">Studio</span></a
+        >
         <ul class="navigation-list">
           <li class="navigation-list-item">
-            <a class="navigation-menu" href="">Studio</a>
+            <a class="navigation-menu" href="./index.html">Studio</a>
           </li>
           <li class="navigation-list-item">
             <a class="navigation-menu" href="">Portfolio</a>
@@ -89,7 +91,7 @@
         </ul>
       </section>
       <!-- our team-->
-      <section>
+      <section class="our-team">
         <h2 class="title-team">Our Team</h2>
         <ul class="team-list">
           <li class="team-item">
