--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -141,7 +141,7 @@
         </ul>
       </section>
       <!-- our portfolio-->
-      <section>
+      <section class="portfolio">
         <h2 class="title-portfolio">Our Portfolio</h2>
         <ul class="portfolio-item">
           <li class="portfolio-item-list">
@@ -218,7 +218,7 @@
       <ul class="footer-list">
         <li class="footer-list-item">
           <a class="footer-logo" href="./index.html"
-            ><span class="logo-span">Web</span>Studio</a
+            ><span class="footer-logo-span">web</span>studio</a
           >
         </li>
         <li class="footer-list-item">
