--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       <ul class="footer-list">
         <li class="footer-list-item">
           <a class="footer-logo" href="./index.html"
-            ><span class="footer-logo-span">web</span>studio</a
+            >web<span class="footer-logo-span">studio</span></a
           >
         </li>
         <li class="footer-list-item">
