--- a/index.html
+++ b/index.html
@@ -215,19 +215,13 @@
     </main>
     <!--footer-->
     <footer class="footer">
-      <ul class="footer-list">
-        <li class="footer-list-item">
-          <a class="footer-logo" href="./index.html"
-            >web<span class="footer-logo-span">studio</span></a
-          >
-        </li>
-        <li class="footer-list-item">
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </li>
-      </ul>
+      <a class="footer-logo" href="./index.html"
+        >web<span class="footer-logo-span">studio</span></a
+      >
+      <p class="footer-text">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
