--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     </main>
     <!--footer-->
     <footer class="footer">
-      <a class="footer-logo" href="./index.html"
+      <a class="header-logo" href="./index.html"
         >web<span class="footer-logo-span">studio</span></a
       >
       <p class="footer-text">
