--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     <!--footer-->
     <footer class="footer">
       <a class="header-logo" href="./index.html"
-        >web<span class="footer-logo-span">studio</span></a
+        >Web<span class="footer-logo-span">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
