--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header class="">
       <nav class="navigation-logo">
         <a class="header-logo" href="./index.html"
-          >Web <span class="span-header-logo">Studio</span></a
+          >Web <span class="header-logo-span">Studio</span></a
         >
         <ul class="navigation-list">
           <li class="navigation-list-item">
@@ -216,7 +216,7 @@
     <!--footer-->
     <footer class="footer">
       <a class="header-logo" href="./index.html"
-        >Web <span class="span-footer-logo">Studio</span></a
+        >Web <span class="header-logo-span">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
