--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <li class="portfolio-item-list">
             <img
               class="image-portfolio-list"
-              src="./images/squoosh-photo/img(banking).jpg"
+              src="./images/img(banking).jpg"
               alt="Banking App"
               width="360"
               height="300"
@@ -158,7 +158,7 @@
           <li class="portfolio-item-list">
             <img
               class="image-portfolio-list"
-              src="./images/squoosh-photo/img(cashless).jpg"
+              src="./images/img(cashless).jpg"
               alt="Cashless Payment"
               width="360"
               height="300"
@@ -169,7 +169,7 @@
           <li class="portfolio-item-list">
             <img
               class="image-portfolio-list"
-              src="./images/squoosh-photo/img(meditation).jpg"
+              src="./images/img(meditation).jpg"
               alt="Meditation App"
               width="360"
               height="300"
@@ -180,7 +180,7 @@
           <li class="portfolio-item-list">
             <img
               class="image-portfolio-list"
-              src="./images/squoosh-photo/img(taxi).jpg"
+              src="./images/img(taxi).jpg"
               alt="Taxi Service"
               width="360"
               height="300"
@@ -191,7 +191,7 @@
           <li class="portfolio-item-list">
             <img
               class="image-portfolio-list"
-              src="./images/squoosh-photo/img(screen).jpg"
+              src="./images/img(screen).jpg"
               alt="Screen Illustrations"
               width="360"
               height="300"
@@ -202,7 +202,7 @@
           <li class="portfolio-item-list">
             <img
               class="image-portfolio-list"
-              src="./images/squoosh-photo/img(online).jpg"
+              src="./images/img(online).jpg"
               alt="Online Courses"
               width="360"
               height="300"
