--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <li class="team-item">
             <img
               class="team-image"
-              src="./images/squoosh-photo/img(1).jpg"
+              src="./images/img1.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
@@ -108,7 +108,7 @@
           <li class="team-item">
             <img
               class="team-image"
-              src="./images/squoosh-photo/img(2).jpg"
+              src="./images/img2.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
@@ -119,7 +119,7 @@
           <li class="team-item">
             <img
               class="team-image"
-              src="./images/squoosh-photo/img(3).jpg"
+              src="./images/img3.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
@@ -130,7 +130,7 @@
           <li class="team-item">
             <img
               class="team-image"
-              src="./images/squoosh-photo/img(4).jpg"
+              src="./images/img4.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
@@ -147,7 +147,7 @@
           <li class="portfolio-item-list">
             <img
               class="image-portfolio-list"
-              src="./images/img(banking).jpg"
+              src="./images/img-banking.jpg"
               alt="Banking App"
               width="360"
               height="300"
@@ -158,7 +158,7 @@
           <li class="portfolio-item-list">
             <img
               class="image-portfolio-list"
-              src="./images/img(cashless).jpg"
+              src="./images/img-cashless.jpg"
               alt="Cashless Payment"
               width="360"
               height="300"
@@ -169,7 +169,7 @@
           <li class="portfolio-item-list">
             <img
               class="image-portfolio-list"
-              src="./images/img(meditation).jpg"
+              src="./images/img-meditation.jpg"
               alt="Meditation App"
               width="360"
               height="300"
@@ -180,7 +180,7 @@
           <li class="portfolio-item-list">
             <img
               class="image-portfolio-list"
-              src="./images/img(taxi).jpg"
+              src="./images/img-taxi.jpg"
               alt="Taxi Service"
               width="360"
               height="300"
@@ -191,7 +191,7 @@
           <li class="portfolio-item-list">
             <img
               class="image-portfolio-list"
-              src="./images/img(screen).jpg"
+              src="./images/img-screen.jpg"
               alt="Screen Illustrations"
               width="360"
               height="300"
@@ -202,7 +202,7 @@
           <li class="portfolio-item-list">
             <img
               class="image-portfolio-list"
-              src="./images/img(online).jpg"
+              src="./images/img-online.jpg"
               alt="Online Courses"
               width="360"
               height="300"
