--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <li class="portfolio-item-list">
             <img
               class="image-portfolio-list"
-              src="./images/img-taxi.jpg"
+              src="./images/imgtaxi.jpg"
               alt="Taxi Service"
               width="360"
               height="300"
