--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <li class="portfolio-item-list">
             <img
               class="image-portfolio-list"
-              src="./images/img-banking.jpg"
+              src="./images/imgbanking.jpg"
               alt="Banking App"
               width="360"
               height="300"
@@ -158,7 +158,7 @@
           <li class="portfolio-item-list">
             <img
               class="image-portfolio-list"
-              src="./images/img-cashless.jpg"
+              src="./images/imgcashless.jpg"
               alt="Cashless Payment"
               width="360"
               height="300"
@@ -169,7 +169,7 @@
           <li class="portfolio-item-list">
             <img
               class="image-portfolio-list"
-              src="./images/img-meditation.jpg"
+              src="./images/imgmeditation.jpg"
               alt="Meditation App"
               width="360"
               height="300"
@@ -191,7 +191,7 @@
           <li class="portfolio-item-list">
             <img
               class="image-portfolio-list"
-              src="./images/img-screen.jpg"
+              src="./images/imgscreen.jpg"
               alt="Screen Illustrations"
               width="360"
               height="300"
@@ -202,7 +202,7 @@
           <li class="portfolio-item-list">
             <img
               class="image-portfolio-list"
-              src="./images/img-online.jpg"
+              src="./images/imgonline.jpg"
               alt="Online Courses"
               width="360"
               height="300"
